tests/errors/var-modified-on-lhs.ja
procedure main()
    int x[2]
    x[x[0]] ^= 1
